--- a/BaseDatos/App.xaml
+++ b/BaseDatos/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="BaseDatos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Tiempo.xaml">
     <Application.Resources>
          
     </Application.Resources>
