--- a/BaseDatos/EdCliente.xaml
+++ b/BaseDatos/EdCliente.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="BaseDatos.Cliente"
+﻿<Window x:Class="BaseDatos.EdCliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Cliente" Height="300" Width="300">
+        Title="EdCliente" Height="371" Width="412">
     <Grid>
         <Label Content="Nombre de Cliente" HorizontalAlignment="Left" Margin="39,43,0,0" VerticalAlignment="Top"/>
         <Label Content="Telefono" HorizontalAlignment="Left" Margin="59,100,0,0" VerticalAlignment="Top"/>
@@ -9,8 +9,10 @@
         <TextBox x:Name="txt1" HorizontalAlignment="Left" Height="23" Margin="162,43,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txt2" HorizontalAlignment="Left" Height="23" Margin="162,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txt3" HorizontalAlignment="Left" Height="23" Margin="162,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Guardar" HorizontalAlignment="Left" Margin="16,214,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Alteraciones" HorizontalAlignment="Left" Margin="167,214,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <ComboBox x:Name="DCliente" HorizontalAlignment="Left" Margin="115,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="DCliente_SelectionChanged" Loaded="DCliente_Loaded"/>
+        <DataGrid x:Name="DeCliente" HorizontalAlignment="Left" Margin="10,202,0,0" VerticalAlignment="Top" Height="128" Width="360" SelectionChanged="DeCliente_SelectionChanged"/>
+        <Button Content="Editar" HorizontalAlignment="Left" Margin="306,122,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="306,64,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
