--- a/BaseDatos/EdProducto.xaml
+++ b/BaseDatos/EdProducto.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="BaseDatos.Producto"
+﻿<Window x:Class="BaseDatos.EdProducto"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Producto" Height="300" Width="300">
+        Title="EdProducto" Height="428.358" Width="567.164">
     <Grid>
         <Label Content="Nombre Producto" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txt1" HorizontalAlignment="Left" Height="23" Margin="154,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
@@ -9,8 +9,10 @@
         <TextBox x:Name="txt2" HorizontalAlignment="Left" Height="23" Margin="154,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Precio" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txt3" HorizontalAlignment="Left" Height="23" Margin="154,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Guardar" HorizontalAlignment="Left" Margin="16,214,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="Alteraciones" HorizontalAlignment="Left" Margin="167,214,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <ComboBox x:Name="DProducto" HorizontalAlignment="Left" Margin="15,21,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="DProducto_SelectionChanged" Loaded="DProducto_Loaded"/>
+        <DataGrid x:Name="DeProducto" HorizontalAlignment="Left" Margin="15,203,0,0" VerticalAlignment="Top" Height="184" Width="457" SelectionChanged="DeProducto_SelectionChanged"/>
+        <Button Content="Editar" HorizontalAlignment="Left" Margin="418,129,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Eliminar" HorizontalAlignment="Left" Margin="418,71,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
