--- a/BaseDatos/EdProducto.xaml
+++ b/BaseDatos/EdProducto.xaml
@@ -6,7 +6,7 @@
         <Label Content="Nombre Producto" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txt1" HorizontalAlignment="Left" Height="23" Margin="154,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="Nombre de Categoria" HorizontalAlignment="Left" Margin="10,94,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txt2" HorizontalAlignment="Left" Height="23" Margin="154,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txt2" HorizontalAlignment="Left" Height="23" Margin="154,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="txt2_TextChanged"/>
         <Label Content="Precio" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txt3" HorizontalAlignment="Left" Height="23" Margin="154,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="DProducto" HorizontalAlignment="Left" Margin="15,21,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="DProducto_SelectionChanged" Loaded="DProducto_Loaded"/>
