--- a/BaseDatos/MainWindow.xaml
+++ b/BaseDatos/MainWindow.xaml
@@ -1,8 +1,16 @@
 ﻿<Window x:Class="BaseDatos.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="530.597" Width="850.373">
+    <Grid Loaded="Grid_Loaded_1">
+        <Button Content="Confirmar compra" HorizontalAlignment="Left" Margin="51,438,0,0" VerticalAlignment="Top" Width="114" Click="Button_Click_3"/>
+        <Button x:Name="add" Content="Añadir" HorizontalAlignment="Left" Margin="200,438,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button Content="Limpiar" HorizontalAlignment="Left" Margin="320,438,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <ComboBox x:Name="DFactura" HorizontalAlignment="Left" Margin="251,42,0,0" VerticalAlignment="Top" Width="184" Loaded="DFactura_Loaded" SelectionChanged="DFactura_SelectionChanged"/>
+        <Label Content="Id Producto" HorizontalAlignment="Left" Margin="87,42,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.284,-0.917"/>
+        <DataGrid x:Name="DeFactura" HorizontalAlignment="Left" Margin="10,185,0,0" VerticalAlignment="Top" Height="205" Width="797" SelectionChanged="DeFactura_SelectionChanged"/>
+        <Label Content="Cantidad de Producto" HorizontalAlignment="Left" Margin="87,92,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txt1" HorizontalAlignment="Left" Height="23" Margin="251,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184"/>
+
     </Grid>
 </Window>
